fix hover, width input, visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -258,7 +258,7 @@ textarea {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
+  color: var(--primary-white-color);
   background-color: var(--hero-footer-bg-color);
 
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -722,11 +722,12 @@ textarea {
   background-color: var(--backdrop-bg-color);
   opacity: 1;
 
-  transition: opacity var(--animate-time-function);
+  transition: opacity var(--animate-time-function), visibility var(--animate-time-function);
 }
 
 .backdrop.is-hidden {
   opacity: 0;
+  visibility: hidden;
   pointer-events: none;
 }
 
@@ -776,7 +777,7 @@ textarea {
   transition: fill var(--animate-time-function);
 }
 
-.modal-close-button:hover,
+/* .modal-close-button:hover, */
 .modal-close-button:focus {
   fill: var(--accent-color);
 }
@@ -804,7 +805,7 @@ textarea {
 }
 
 .modal-form-input {
-  width: 448px;
+  width: 100%;
   height: 40px;
   padding: 12px 12px 12px 42px;
 
@@ -819,7 +820,6 @@ textarea {
 
 .modal-form-label-text {
   position: absolute;
-  z-index: 1;
   top: 50%;
   left: 42px;
   transform: translateY(-50%);
@@ -833,7 +833,6 @@ textarea {
 
 .modal-form-label-icon {
   position: absolute;
-  z-index: 1;
   top: 50%;
   left: 15px;
   transform: translateY(-50%);
@@ -845,7 +844,6 @@ textarea {
 }
 
 /* Modal form textarea */
-
 .modal-form-textarea {
   display: block;
 
@@ -872,7 +870,7 @@ textarea {
 .modal-form-comment {
   display: block;
 
-  width: 448px;
+  width: 100%;
   height: 120px;
   padding: 12px 15px;
 
@@ -889,12 +887,11 @@ textarea {
 }
 
 /* Modal form name, tel, email: hover, focus, animation */
-
 .modal-form-input:focus ~ .modal-form-label-text,
-.modal-form-input:hover ~ .modal-form-label-text,
+/* .modal-form-input:hover ~ .modal-form-label-text, */
 .modal-form-input:focus + .modal-form-label-icon,
-.modal-form-input:hover + .modal-form-label-icon,
-.modal-form-comment:hover + .modal-form-textarea-text,
+/* .modal-form-input:hover + .modal-form-label-icon, */
+/* .modal-form-comment:hover + .modal-form-textarea-text, */
 .modal-form-comment:focus + .modal-form-textarea-text {
   fill: var(--accent-color);
   color: var(--accent-color);
@@ -918,7 +915,7 @@ textarea {
   color: var(--accent-color);
 }
 
-.modal-form-comment:hover::placeholder,
+/* .modal-form-comment:hover::placeholder, */
 .modal-form-comment:focus::placeholder {
   color: var(--accent-color);
   font-size: 14px;
@@ -932,15 +929,14 @@ textarea {
 
 .modal-form-input:not(:placeholder-shown),
 .modal-form-comment:not(:placeholder-shown),
-.modal-form-input:hover,
+/* .modal-form-input:hover, */
 .modal-form-input:focus,
-.modal-form-comment:hover,
+/* .modal-form-comment:hover, */
 .modal-form-comment:focus {
   border: 1px solid var(--accent-color);
 }
 
 /* Modal form policy */
-
 .modal-form-policy {
   position: relative;
   left: 31px;
@@ -997,7 +993,7 @@ textarea {
   transition: opacity var(--animate-time-function);
 }
 
-.modal-form-checkbox-input:hover + .modal-form-checkbox-icon,
+/* .modal-form-checkbox-input:hover + .modal-form-checkbox-icon, */
 .modal-form-checkbox-input:focus + .modal-form-checkbox-icon {
   border: 2px solid var(--accent-color);
 }
@@ -1011,7 +1007,6 @@ textarea {
 }
 
 /* Modal form button */
-
 .send-form-button {
   display: block;
 
